--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# IDE and Editor files
+# IDE and Editor files# npm
+package-lock.json
 .idea/
 .vscode/
 *.swp
